--- a/calculator.html
+++ b/calculator.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><head>
+  <h1>Alex Rodriguez</h1>
 <title>Calculator</title><meta charset="utf-8">
 <script type="text/javascript">
 
